# glMath

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  makefile
artwork/: icon.ai
glMath/: glMath.h
glMath.xcodeproj/: project.pbxproj
glMath.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
glMath/geometry/: bounding_box.h  box.h  frustum_viewport.h  orthographic_viewport.h  plane.h  size.h  sphere.h  triangle.h  vertex.h
glMath/internal/: common.h  definitions.h  matrix.h  matrix3f.h  matrix4f.h  projections.h  ray.h  spherical_coordinates_radians.h  transformations.h  vector.h  vector2f.h  vector3f.h  vector4f.h
source/: common.h  definitions.h  glMath.h  glMath_umbrella.h  matrix.h  transformations.h  vector.h
source/geometry/: bounding_box.h  box.h  frustum_viewport.h  orthographic_viewport.h  plane.h
source/internal/: common.h  definitions.h  matrix.h  matrix3f.h  matrix4f.h  projections.h  sc_degrees.h  sc_radians.h  spherical_coordinates_radians.h  transformations.h  vector.h  vector2f.h  vector3f.h  vector4f.h
source/spherical_coordinates/: sc_degrees.h  sc_radians.h
tests/: boundingbox_tests.hpp  frustum_tests.hpp  helper.h  main.cpp  matrix_tests.hpp  plane_tests.hpp  ray_tests.hpp  sphere_tests.hpp  surface_triangle_tests.hpp  triangle_tests.hpp  vector_testing_program.cpp  vector_tests.cpp  vector_tests.hpp  vertex_triangle_tests.hpp
tests/bounding_box/: boundingbox_testing_program.cpp  boundingbox_tests.cpp  boundingbox_tests.hpp
tests/environment/: Dockerfile  install_gtest.sh
tests/frustum/: frustum_testing_program.cpp  (+2 more)
(+15 files in other folders)
